# conn2svg

./: Dockerfile  Makefile  README.md  README.rst  docker-compose.yml  requirements-dev.txt  requirements-tests.txt  setup.cfg
.github/workflows/: publish.yml
docs/: conf.py  index.rst
src/conn2svg/: __init__.py  _tooling.py  conn2svg.py
tests/: run_all.py  test_conn2svg.py
