[metadata]
name = conn2svg
description = Connector pinout drawing (SVG) generator used to automatically generate interface control documents.
long_description_content_type = text/x-rst
long_description = file: README.rst
author = Piotr Kuligowski
readme = "README"
url = https://github.com/partmanager/conn2svg
project_urls =
    Bug Tracker = https://github.com/partmanager/conn2svg/issues
    Changelog = https://github.com/partmanager/conn2svg/releases
    Source Code = https://github.com/partmanager/conn2svg
    Documentation = https://partmanager.github.io/conn2svg
classifiers =
    Programming Language :: Python :: 3
    Intended Audience :: Developers
    Intended Audience :: Manufacturing
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license_file = LICENSE

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    drawsvg==2.3.0

[options.packages.find]
where = src
